結合テストの実装

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,3 +1,4 @@
+<div class="message">
   <div class="upper-message">
     <div class="message-user">
       <!-- 投稿したユーザー名情報を出力する -->
@@ -6,7 +7,6 @@
     <div class="message-date">
       <!-- 投稿した時刻を出力する -->
       <%= l message.created_at %>
-
     </div>
   </div>
   <div class="lower-message">
